--- a/.github/workflows/chocolatine.yml
+++ b/.github/workflows/chocolatine.yml
@@ -1,20 +1,22 @@
 name: chocolatine
 
 on:
-push:
-  branches-ignore:
+  push:
+    branches-ignore:
       - ga-ignore-*
+
 env:
   MIRROR_URL: https://github.com/EpitechPromo2028/B-DOP-200-COT-2-2-chocolatine-prince.goudayi.git
 
 jobs:
-check_coding_style:
+  check_coding_style:
     runs-on: ubuntu-latest
-    image: ghcr.io/epitech/coding-style-checker:latest
+    container:
+      image: ghcr.io/epitech/coding-style-checker:latest
     steps:
-      - name: Check the repo
+      - name: Checkout the repo
         uses: actions/checkout@v4
-      - name: Display coding-style-reports.log
-         run: check.sh $(pwd) $(pwd)
-      - name: display
+      - name: Check coding style
+        run: check.sh $(pwd) $(pwd)
+      - name: Display coding style report
         run: cat coding-style-reports.log
